# app/Http/Resources/AuthorResource.php
@@ -1,0 +1,33 @@
+<?php
+
+namespace App\Http\Resources;
+
+use Illuminate\Http\Request;
+use Illuminate\Http\Resources\Json\JsonResource;
+use OpenApi\Annotations as OA;
+
+/**
+ * @OA\Schema(
+ *     schema="AuthorResource",
+ *     type="object",
+ *     @OA\Property(property="id", type="integer", example=3),
+ *     @OA\Property(property="key", type="string", example="cnn"),
+ *     @OA\Property(property="label", type="string", example="CNN"),
+ * )
+ */
+class AuthorResource extends JsonResource
+{
+    /**
+     * Transform the resource into an array.
+     *
+     * @return array<string, mixed>
+     */
+    public function toArray(Request $request): array
+    {
+        return [
+            'id' => $this->id,
+            'key' => $this->key,
+            'label' => $this->label
+        ];
+    }
+}
