# app/Models/Category.php
@@ -1,0 +1,20 @@
+<?php
+
+namespace App\Models;
+
+use App\Models\Article;
+use Illuminate\Database\Eloquent\Factories\HasFactory;
+use Illuminate\Database\Eloquent\Model;
+use Illuminate\Database\Eloquent\Relations\HasMany;
+
+class Category extends Model
+{
+    use HasFactory;
+
+    protected $guarded = [];
+
+    public function articles(): HasMany
+    {
+        return $this->hasMany(Article::class);
+    }
+}
