# storage/api-docs/api-docs.json
@@ -22,23 +22,55 @@
                 "operationId": "89181b74a8aa4d580750ede6aa32f92a",
                 "parameters": [
                     {
-                        "name": "category",
+                        "name": "category_id",
                         "in": "query",
-                        "description": "Filter by category",
+                        "description": "Filter by category identifier",
                         "required": false,
                         "schema": {
-                            "type": "string",
-                            "example": "World News"
+                            "type": "integer",
+                            "example": 1
                         }
                     },
                     {
-                        "name": "author",
+                        "name": "categories_id",
                         "in": "query",
-                        "description": "Filter by author",
+                        "description": "Filter by user categories identifier",
                         "required": false,
                         "schema": {
-                            "type": "string",
-                            "example": "Benjamen"
+                            "type": "array",
+                            "items": {
+                                "type": "integer"
+                            },
+                            "example": [
+                                2,
+                                3
+                            ]
+                        }
+                    },
+                    {
+                        "name": "author_id",
+                        "in": "query",
+                        "description": "Filter by author identifier",
+                        "required": false,
+                        "schema": {
+                            "type": "integer",
+                            "example": 1
+                        }
+                    },
+                    {
+                        "name": "authors_id",
+                        "in": "query",
+                        "description": "Filter by authors identifier",
+                        "required": false,
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "type": "integer"
+                            },
+                            "example": [
+                                1,
+                                2
+                            ]
                         }
                     },
                     {
@@ -52,13 +84,29 @@
                         }
                     },
                     {
+                        "name": "sources_id",
+                        "in": "query",
+                        "description": "Filter by sources identifier",
+                        "required": false,
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "type": "integer"
+                            },
+                            "example": [
+                                3,
+                                4
+                            ]
+                        }
+                    },
+                    {
                         "name": "publish_date",
                         "in": "query",
-                        "description": "Date range filter in the format 'YYYY-MM-DD,YYYY-MM-DD'",
+                        "description": "Date range filter in the format 'YYYY-MM-DD'",
                         "required": false,
                         "schema": {
                             "type": "string",
-                            "example": "2025-01-01,2025-01-31"
+                            "example": "2025-01-01"
                         }
                     },
                     {
@@ -78,7 +126,7 @@
                         "required": false,
                         "schema": {
                             "type": "integer",
-                            "default": 15
+                            "default": 50
                         }
                     },
                     {
@@ -120,14 +168,14 @@
                 }
             }
         },
-        "/api/articles/{id}": {
+        "/articles/{id}": {
             "get": {
                 "tags": [
                     "Articles"
                 ],
                 "summary": "Get a single article",
                 "description": "Fetch the details of a specific article by its identifier.",
-                "operationId": "b3e529eab04efb5d305b07e2e58d9869",
+                "operationId": "126f0079c2def3834cf2c4a2456d16f9",
                 "parameters": [
                     {
                         "name": "id",
@@ -157,6 +205,116 @@
                     },
                     "404": {
                         "description": "Article not found"
+                    }
+                }
+            }
+        },
+        "/authors": {
+            "get": {
+                "tags": [
+                    "Authors"
+                ],
+                "summary": "Get a list of all authors",
+                "description": "Retrieve a paginated list of news authors with optional pagination controls",
+                "operationId": "33b4ca0e528a8b6298d9942781a0c85a",
+                "parameters": [
+                    {
+                        "name": "per_page",
+                        "in": "query",
+                        "description": "Number of items per page (default: 50, max: 100)",
+                        "required": false,
+                        "schema": {
+                            "type": "integer",
+                            "example": 50
+                        }
+                    },
+                    {
+                        "name": "page",
+                        "in": "query",
+                        "description": "Page number",
+                        "required": false,
+                        "schema": {
+                            "type": "integer",
+                            "example": 1
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful operation",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "data": {
+                                            "type": "array",
+                                            "items": {
+                                                "$ref": "#/components/schemas/AuthorResource"
+                                            }
+                                        },
+                                        "meta": {
+                                            "$ref": "#/components/schemas/PaginationMeta"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/categories": {
+            "get": {
+                "tags": [
+                    "Categories"
+                ],
+                "summary": "Get a list of all categories",
+                "description": "Retrieve a paginated list of news categories with optional pagination controls",
+                "operationId": "ead5fb1cf2a7453acb2e37928a1b1eaf",
+                "parameters": [
+                    {
+                        "name": "per_page",
+                        "in": "query",
+                        "description": "Number of items per page (default: 50, max: 100)",
+                        "required": false,
+                        "schema": {
+                            "type": "integer",
+                            "example": 50
+                        }
+                    },
+                    {
+                        "name": "page",
+                        "in": "query",
+                        "description": "Page number",
+                        "required": false,
+                        "schema": {
+                            "type": "integer",
+                            "example": 1
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful operation",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "data": {
+                                            "type": "array",
+                                            "items": {
+                                                "$ref": "#/components/schemas/CategoryResource"
+                                            }
+                                        },
+                                        "meta": {
+                                            "$ref": "#/components/schemas/PaginationMeta"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
                     }
                 }
             }
@@ -282,15 +440,6 @@
                         "type": "string",
                         "example": "breaking-news-update"
                     },
-                    "provider_id": {
-                        "type": "string",
-                        "example": "bbc-world-123",
-                        "nullable": true
-                    },
-                    "provider": {
-                        "type": "string",
-                        "example": "bbc-news"
-                    },
                     "title": {
                         "type": "string"
                     },
@@ -345,6 +494,40 @@
                 },
                 "type": "object"
             },
+            "AuthorResource": {
+                "properties": {
+                    "id": {
+                        "type": "integer",
+                        "example": 3
+                    },
+                    "key": {
+                        "type": "string",
+                        "example": "cnn"
+                    },
+                    "label": {
+                        "type": "string",
+                        "example": "CNN"
+                    }
+                },
+                "type": "object"
+            },
+            "CategoryResource": {
+                "properties": {
+                    "id": {
+                        "type": "integer",
+                        "example": 3
+                    },
+                    "key": {
+                        "type": "string",
+                        "example": "cnn"
+                    },
+                    "label": {
+                        "type": "string",
+                        "example": "CNN"
+                    }
+                },
+                "type": "object"
+            },
             "SourceResource": {
                 "properties": {
                     "id": {
@@ -368,6 +551,14 @@
         {
             "name": "Articles",
             "description": "Articles"
+        },
+        {
+            "name": "Authors",
+            "description": "Authors"
+        },
+        {
+            "name": "Categories",
+            "description": "Categories"
         },
         {
             "name": "Sources",
